--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Website</title>
 </head>
 
 <body>
-    <div class="header">
+    <header>
+        <!--calling it just header is more simple than identifying it at class='header' There is only one header in the entire code-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
+            <!--changed div to nav to make it less repetative-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,61 +24,69 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        </nav>
+    </header>
+<!--I have added an accesible alt attribute for the background image.-->
+    <div class="hero" role="img" aria-label="People in a meeting"></div>
+    <main>
+    <!--Naming it main is better than div. Less repetative. This way I don't need to add a class and just name it main in the css since there is no other main in whole code-->
+
+        <div id="search-engine-optimization" class="images">
+            <!--Named the class as images to one for all the div because they are all the same set ups in css-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook in the middle of the table with coffee on the side and laptop and pensils" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+
+        <div id="online-reputation-management" class="images">
+            <img src="./assets/images/online-reputation-management.jpg" alt="someone typing in a laptop and reads reputation with charts" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        
+        <div id="social-media-marketing" class="images">
+            <img src="./assets/images/social-media-marketing.jpg" alt = "people gathered in a table with laptop and tablets and socializing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    </main>
+    <section>
+        <!--Named the div to section to make it less repetative and no need for class because there is only one section in the whole code-->
+        <div class="benefits">
+            <!--Replaced the benefit-lead, benifit-brand and benefit-cost all to benefits since there are all the same styles for css-->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt = "lead generation icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefits">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt = "brand awareness icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefits">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost Management icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    </section>
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
